# AIgency_test

./: .env  .env.example  README.md  docker-compose.test.yml  docker-compose.yaml
alembic/: Dockerfile  pyproject.toml
alembic/migrations/: env.py
common/: .env  pyproject.toml
common/common/: config.py  database.py  enums.py  models.py  schemas.py
insights_api/: Dockerfile  insights_routes.py  main.py  pyproject.toml
intake_api/: Dockerfile  dependencies.py  lead_routes.py  main.py  pyproject.toml
tests/: conftest.py  requirements.txt  test_e2e_leads.py
triage_worker/: Dockerfile  exceptions.py  insight_service.py  main.py  processor.py  pyproject.toml
triage_worker/llm_adapters/: __init__.py  base.py  rule_based.py
