[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["korg1000 <korg1000@yandex.ru>"]
packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.0"
aioredis = "^2.0.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.1"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
